# token-usage

./: .gitignore  LICENSE  README.md  REFACTOR_NOTES.md  config.example.toml  install.sh  plan.md  pyproject.toml
scripts/: sb-ai-usage  sb-chatgpt-usage  sb-claude-usage  sb-kimi-usage  sb-opencode-go-usage  sb-opencode-usage
src/token_usage/: _cookies.py  _normalize.py  cache.py  cli.py  config.py  statusline_writer.py
src/token_usage/claude/: __init__.py  aggregator.py  authoritative.py  blocks.py  limits.py  local_summary.py  models.py  oauth_usage.py  opencode_reader.py  reader.py  statusline.py
src/token_usage/formatters/: _shared.py  detail.py  json_out.py  statusbar.py
src/token_usage/kimi/: usage.py
src/token_usage/openai_chat/: chatgpt_wham.py
src/token_usage/opencode/: usage.py
tests/: conftest.py  test_aggregator.py  test_authoritative.py  test_bar_window_override.py  test_blocks.py  test_cache.py  test_chatgpt_wham.py  test_claude_lkg_tier.py  test_claude_source_matrix.py  test_cli_fallback.py  test_cli_hybrid.py  test_cli_main.py  test_config.py  test_cookies.py  test_detail.py  test_golden_e2e.py  test_json_out.py  test_kimi_usage.py  test_limits.py  test_local_summary.py  test_normalize_windows.py  test_oauth_usage.py  test_only_filter.py  test_only_isolation.py  test_opencode_reader.py  test_opencode_usage_provider.py  test_reader.py  test_scenario_contract.py  test_schema_failure_matrix.py  test_statusbar.py  test_statusbar_detail_consistency.py  test_statusline.py  test_statusline_writer.py
tests/fixtures/multi_session_dir/: sess.jsonl
tests/fixtures/single_block_dir/: sess.jsonl
tests/fixtures/streaming_duplicates_dir/: sess.jsonl
tests/manual/: demo_bug_fix.py
