[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "token-usage"
version = "0.1.0"
description = "Claude Code and ChatGPT Plus usage tracker"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
  "tomli; python_version<'3.11'",
  "curl_cffi>=0.7",
  "browser-cookie3>=0.19",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[project.scripts]
token-usage = "token_usage.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/token_usage"]

[tool.hatch.build.targets.sdist]
include = [
  "src/token_usage",
  "scripts/sb-ai-usage",
  "README.md",
  "LICENSE",
  "config.example.toml",
  "install.sh",
]
